
add_subdirectory(tutorial_01)
add_subdirectory(tutorial_02)
add_subdirectory(tutorial_03)
add_subdirectory(tutorial_04)
add_subdirectory(tutorial_05)
add_subdirectory(tutorial_06)
add_subdirectory(tutorial_07)
add_subdirectory(tutorial_08)
add_subdirectory(tutorial_09)
add_subdirectory(tutorial_10)
add_subdirectory(tutorial_11)
add_subdirectory(tutorial_12)
add_subdirectory(tutorial_13)
add_subdirectory(tutorial_14)
add_subdirectory(tutorial_15)
add_subdirectory(tutorial_16)
add_subdirectory(tutorial_17)
add_subdirectory(tutorial_18)
add_subdirectory(tutorial_19)
add_subdirectory(tutorial_20)
add_subdirectory(tutorial_21)
add_subdirectory(tutorial_22)
add_subdirectory(tutorial_23)
add_subdirectory(tutorial_24)
add_subdirectory(tutorial_25)